--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,11 @@
 home.welcome=Welcome to the best Web Forum!
+navigation.home=Home
+
+
+topics.title.empty=No topics found!
+topics.title=All Topics
+
+topic.title=Title
+topic.creator=Creator
+topic.comments=Comments
+topic.creationDate=Creation date
