TagsView.html view testing

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,14 @@
 home.welcome=Welcome to the best Web Forum!
 navigation.home=Home
 
-
 topics.title.empty=No topics found!
 topics.title=All Topics
-
 topic.title=Title
 topic.creator=Creator
 topic.comments=Comments
 topic.creationDate=Creation date
+
+tags.name.empty=No tags found!
+tags.id=Tag ID
+tags.name=Tag name
+tags.creator=Tag owner
