VerificationToken prepared for user verification process

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ topic.comments=Comments
 topic.creationDate=Creation date
 
 tags.name.empty=No tags found!
+tags.name.allTags=Listing of all tags
 tags.id=Tag ID
 tags.name=Tag name
 tags.creator=Tag owner
