Implemented pagination for TagView

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,5 @@ tags.name.allTags=Listing of all tags
 tags.id=Tag ID
 tags.name=Tag name
 tags.creator=Tag owner
+tags.creation_date=Creation Date
+tags.paged=Page
