create functionality for admin to create other admins

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 home.welcome=Welcome to the best Web Forum!
 navigation.home=Home
+error.not-found = Entity Not Found!
 
 topics.title.empty=No topics found!
 topics.title=All Topics
@@ -15,3 +16,9 @@ tags.name=Tag name
 tags.creator=Tag owner
 tags.creation_date=Creation Date
 tags.paged=Page
+
+user.username= Username
+user.email =Email
+user.firstName=First name
+user.lastName=Last name
+user.isAdmin = Admin
