Added single Topic view + additional messages.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 home.welcome=Welcome to the best Web Forum!
 navigation.home=Home
+navigation.all-topics=Browse all topics
 error.not-found = Entity Not Found!
 
 topics.title.empty=No topics found!
@@ -7,6 +8,7 @@ topics.title=All Topics
 topic.title=Title
 topic.creator=Creator
 topic.comments=Comments
+topic.views=Views
 topic.creationDate=Creation date
 
 tags.name.empty=No tags found!
