--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,8 +17,12 @@ tags.creator=Tag owner
 tags.creation_date=Creation Date
 tags.paged=Page
 
+users.empty = No users found!
+users.title = All users
 user.username= Username
 user.email =Email
 user.firstName=First name
 user.lastName=Last name
 user.isAdmin = Admin
+user.password = Password
+user.already-exists = This user already exists!
