frontend update on contact_us page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
-home.welcome=Welcome to the best Web Forum!
 navigation.home=Home
+navigation.loginarea = Login Area
+navigation.contactus = Contact us
 navigation.all-topics=Browse all topics
 error.not-found = Entity Not Found!
 
@@ -28,3 +29,4 @@ user.lastName=Last name
 user.isAdmin = Admin
 user.password = Password
 user.already-exists = This user already exists!
+
