Front end cleanup and fixing element positions

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,13 @@
 navigation.home=Home
 navigation.loginarea = Login Area
-navigation.contactus = Contact us
+navigation.login = Login
+navigation.contact_us = Contact us
 navigation.all-topics=Browse all topics
+navigation.create_topic = Crete new topic
+navigation.list_all_topics = List all topics
+navigation.list_all_users = List all users
+navigation.list_all_tags = List all tags
+
 error.not-found = Entity Not Found!
 
 topics.title.empty=No topics found!
