--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ navigation.create_topic = Crete new topic
 navigation.list_all_topics = List all topics
 navigation.list_all_users = List all users
 navigation.list_all_tags = List all tags
+navigation.ask_question = Ask a question
+navigation.edit_profile = Edit Profile
 
 error.not-found = Entity Not Found!
 
