Finally RQ error (:

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ navigation.list_all_users = List all users
 navigation.list_all_tags = List all tags
 navigation.ask_question = Ask a question
 navigation.edit_profile = Edit Profile
+navigation.nocomments = No comments yet. Be the first to leave a comment!
 
 error.not-found = Entity Not Found!
 
