delete-user changes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,4 +39,5 @@ user.lastName=Last name
 user.isAdmin = Admin
 user.password = Password
 user.already-exists = This user already exists!
-
+user.delete= Delete
+user.cancel=Cancel
